add trans hoc component, fix i18n placeholder - fix login store - move change locale btns to footer

--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -35,8 +35,11 @@
   "CATEGORIES": "分类",
   "Newest": "最新",
 
-  "appList": {
-    "more": "更多.."
-  }
+  "more": "更多..",
+
+  "About": "关于",
+  "Help": "帮助",
+  "Terms": "案例"
+
 
 }
