- upgrade create page style - upgrade Statistics style

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -7,7 +7,7 @@
     "slogan": "Application Management Platform on Multi-Cloud Environment"
   },
 
-  "more": "more..",
+  "more": "More..",
 
   "Back to link": "← Back to {{link}}",
 
