- fix appdetail styles fix tabnavs styles - fix Statistics styles

--- a/locales/zh/translation.json
+++ b/locales/zh/translation.json
@@ -38,7 +38,7 @@
 
   "Back to link": "← 返回 {{link}}",
   "Deploy": "部署",
-  "Chart Versions": "Chart版本",
+  "Versions": "版本",
   "Application Version": "应用版本",
   "Home": "首页",
   "Source repository": "代码仓库",
