--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -7,7 +7,7 @@
   "Overview": "总览",
   "Apps": "应用",
   "Clusters": "集群",
-  "Runtimes": "运行时",
+  "Runtimes": "运行环境",
   "Repos": "仓库",
   "Users": "用户",
   "Roles": "角色",
@@ -56,18 +56,13 @@
   "Top Repos": "人气最佳的仓库",
   "Top Apps": "人气最佳的应用",
   "Latest Clusters": "最新创建的集群",
-  "My Runtimes": "我的运行时",
+  "My Runtimes": "我的运行环境",
   "Recently Viewed Apps": "最近查看的应用",
 
   "Public": "公共",
   "Private": "私有",
 
-  "pg-overview": {
-    "normal_welcome_desc": "Deployed as one-stop-shop application management platform in an organization to support multiple cloud systems including hybrid cloud"
-  },
-
   "Nodes": "节点",
-  "Deploy": "部署",
 
   "Delete App": "删除应用",
   "Delete App desc": "您确定要删除该应用吗?",
@@ -81,7 +76,6 @@
   "Search App": "搜索应用",
   "App Name": "应用名称",
   "Latest Version": "最近版本",
-  "Categories": "分类",
   "Status": "状态",
   "Visibility": "可见性",
   "Repo": "仓库",
@@ -98,13 +92,12 @@
   "Delete Version desc": "您确定要删除该版本吗?",
   "Search Clusters": "搜索集群",
   "Search Version": "搜索版本",
-  "Versions": "版本",
 
 
   "Preview in Catalog": "在分类中预览",
   "Date Updated": "更新时间",
 
-  "Total": "总共",
+  "Total": "总计",
   "Lasted 2 Weeks": "最近两周",
 
 
@@ -115,8 +108,8 @@
   "Deleted": "已删除",
   "Ceased": "已销毁",
 
-  "public": "公共的",
-  "private": "私有的",
+  "public": "公共",
+  "private": "私有",
 
   "Basic Settings": "基本设置",
   "Deploy Settings": "部署设置",
@@ -133,7 +126,7 @@
   "operate cluster desc": "您确定要{{operate}}该集群吗？",
   "Cluster Name": "集群名称",
   "App": "应用",
-  "Runtime": "运行时",
+  "Runtime": "运行环境",
   "Node Count": "节点数量",
   "User": "用户",
 
@@ -147,7 +140,7 @@
   "Private IP": "私有IP",
 
   "Runtime Provider" : "运行环境提供商",
-  "Zone/Namespace" : "域/命名空间",
+  "Zone/Namespace" : "区/命名空间",
   "Cluster": "集群",
   "Creator": "创建者",
   "Count": "数量",
@@ -165,41 +158,61 @@
 
 
   "Provider": "提供商",
-  "Public": "公共的",
-  "Private": "私有的",
   "Modify Repo": "修改仓库",
   "Delete Repo": "删除仓库",
   "Delete Repo desc": "您确定要删除该仓库吗?",
   "Search Repo": "搜索仓库",
   "Trigger indexer": "触发索引器",
-  "Runtime Selectors": "运行时选择器",
+  "Runtime Selectors": "运行环境选择器",
   "Event Id": "事件ID",
   "successful": "已成功",
+  "Successful": "已成功",
   "The name of the repo": "仓库的名称",
 
-  "Runtime Name": "运行时名称",
+  "Runtime Name": "运行环境名称",
   "Cluster Count": "集群数量",
-  "Delete Runtime": "删除运行时",
-  "Modify Runtime": "修改运行时",
-  "Delete Runtime desc": "您确定要删除该运行时吗?",
-  "Search Runtimes": "搜索运行时",
-  "Zone": "地区",
+  "Delete Runtime": "删除运行环境",
+  "Modify Runtime": "修改运行环境",
+  "Delete Runtime desc": "您确定要删除该运行环境吗?",
+  "Search Runtimes": "搜索运行环境",
+  "Zone": "区域",
   "Namespace": "命名空间",
   "Credential": "证书",
-  "The name of the runtime": "运行时的名称",
+  "The name of the runtime": "运行环境的名称",
   "The Credential of provider": "提供商的凭证",
   "Remove": "移除",
   "Add": "添加",
-
 
   "Confirm": "确定",
   "Cancel": "取消",
   "Selected": "已选中",
 
-
   "No search data": "没有相关搜索结果！",
   "Guide": "指导",
   "Create Repo explain": "在OpenPitrix中，部署的每个应用程序都是基础软件包存储库，换句话说，如果要将OpenPitrix用于多云应用程序管理器，则需要先创建存储库。应用程序管理器可以将包存储到http / https服务器或S3对象存储。",
-  "Create Runtime explain": "运行时是云提供商，它可以是AWS、GCE、QingCloud、Kubernetes、OpenStack、VMware VSphere等，让OpenPitrix有权限访问这些云提供商，OpenPitrix将管理所有这些应用程序。",
-  "Deploy App explain": "OpenPitrix将应用程序部署到任何云提供商，它非常简单，选择想要部署的应用程序，然后选择运行时（云提供商），最后按下确定按钮。这样就完成了。"
+  "Create Runtime explain": "运行环境是云提供商，它可以是AWS、GCE、QingCloud、Kubernetes、OpenStack、VMware VSphere等，让OpenPitrix有权限访问这些云提供商，OpenPitrix将管理所有这些应用程序。",
+  "Deploy App explain": "OpenPitrix将应用程序部署到任何云提供商，它非常简单，选择想要部署的应用程序，然后选择运行环境（云提供商），最后按下确定按钮。这样就完成了。",
+
+  "NO_SEARCH_DATA": "暂无应用数据!",
+  "uncategorized": "未分类",
+  "repo_visible": "{{visible}}仓库",
+
+  "Browse Apps": "浏览应用",
+  "Create Repo": "创建仓库",
+  "Manage Clusters": "管理集群",
+  "Browse": "浏览",
+  "Manage": "管理",
+
+  "EMPTY_APP_TIPS": "如果OpenPitrix管理员设置完毕仓库，所有的应用会自动导入。作为OpenPitrix用户，可以浏览所有公有应用，可以通过标签和类别来过滤应用。",
+  "EMPTY_REPO_TIPS": "应用开发者可以非常轻松的创建OpenPitrix规范的打包应用，该应用通过yaml或者json格式来描述，并可以上传应用到http服务器或者对象存储系统。",
+  "EMPTY_CLUSTER_TIPS": "OpenPitrix管理应用的生命周期，贯穿始终。应用的状态(通常以集群方式运行)例如：阻塞，活跃，关闭，删除。如果管理员想停止集群，只需要告诉OpenPitrix， 它将帮助云运维人员完成后续工作。",
+
+  "Private Repo": "私有仓库",
+
+  "NORMAL_GUIDING_WORDS": "欢迎来到OpenPitrix, 接下来你想做什么?..",
+
+  "Copy success": "复制成功",
+
+  "search_results": "搜索结果"
+
 }
