- fix deploy page, operate styles bug

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -94,7 +94,7 @@
   "Search Version": "搜索版本",
 
 
-  "Preview in Catalog": "在分类中预览",
+  "Preview in Catalog": "在目录中预览",
   "Date Updated": "更新时间",
 
   "Total": "总计",
