- translation Uncategorized, modify getProgress logic

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -207,6 +207,7 @@
 
   "NO_SEARCH_DATA": "暂无应用数据!",
   "uncategorized": "未分类",
+  "Uncategorized": "未分类",
   "repo_visible": "{{visible}}仓库",
 
   "Browse Apps": "浏览应用",
