feat: Add translate for new pages

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -38,6 +38,31 @@
 
   "repo_visible": "{{visible}} Repos",
 
+
+  "creat_new_app": "Create New Application",
+  "creat_new_version": "Create New Version",
+  "select_repo_app": "Select a Repo to store your application",
+  "diff_repo": "Difference between public repo and private repo.",
+  "click_upload": "Please click to select file upload",
+  "file_format_note": "The file format supports TAR, TAR.GZ, TAR.BZ and ZIP",
+  "view_guide_1": "View the",
+  "view_guide_2": "《Openpitrix Develop Guide》",
+  "view_guide_3": "and learn how to make config files",
+  "app_created": "Your application has been created",
+  "go_back_app_1": "Also you can",
+  "go_back_app_2": " go back ",
+  "go_back_app_3": "and reload application package.",
+  "edit_version_1": "Also you can",
+  "edit_version_2": " edit ",
+  "edit_version_3": "more information for this version",
+  "version_submiited": "Version {{name}} has been submiited.",
+  "version_created": "New version has been created.",
+  "review_process_info": "The review process usually takes 2-3 business days, please be patient.",
+  "version_name_tips": "Use the number to indicate the version number of the application",
+  "version_desc_tips": "The description of the version will appear on the app details page, and the number of words should not exceed 300 words",
+  "ssh_key_guide":" SSH keys allow you to establish a secure connection between your computer and Cluster Nodes.",
+  "delete_key_desc": "Are you sure delete this SSH Key?",
+
   "EMPTY_APP_TIPS": "If OpenPitrix administrator setting repo done, all applications can imported automatically. As OpenPitrix user, can browse all public applications. and browse by label or categories",
   "EMPTY_REPO_TIPS": "Application developer create OpenPitrix packaged apps very easy, it's used yaml or json format for description language, and upload to http server or object storage",
   "EMPTY_CLUSTER_TIPS": "OpenPitrix managing application lifecycle ,both day1 and day2 , the status of application (as normal run as cluster )like : pending, active, shutdown, deleted. If admin want to stop clusters, just tell OpenPitrix, it will help cloud administrator finished the rest steps",
