--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -60,7 +60,7 @@
   "Top Repos": "人气最佳的仓库",
   "Top Apps": "人气最佳的应用",
   "Latest Clusters": "最新创建的集群",
-  "My Runtimes": "我的运行环境",
+  "My Runtimes": "我的环境",
   "Recently Viewed Apps": "最近查看的应用",
 
   "Public": "公共",
@@ -102,13 +102,36 @@
   "Date Created": "创建时间",
 
 
+  "My Apps": "我的应用",
+  "All": "所有",
+  "Versions": "版本列表",
+  "Create version": "创建版本",
+  "Logs": "日志",
+  "New version": "新版本",
+  "Package": "压缩包",
+
+  "Upload Package": "上传压缩包",
+  "Next": "下一步",
+  "Back": "返回",
+  "Esc": "退出",
+  "Congratulations": "祝贺!",
+  "Deploy & Test": "部署 & 测试",
+  "View in Store": "在商店中查看",
+  "Tips": "提示",
+  "Operations": "操作",
+  "New version": "新版本",
+
+
   "Preview in Catalog": "在目录中预览",
   "Date Updated": "更新时间",
 
   "Total": "总计",
   "Lasted 2 Weeks": "最近两周",
 
-
+  "Passed": "已通过",
+  "Rejected": "已拒绝",
+  "Draft": "待提交",
+  "Creating": "创建中",
   "Pending": "等待中",
   "Active": "活跃",
   "Stopped": "已关闭",
@@ -120,6 +143,13 @@
   "Working": "工作中",
   "Updating": "更新中",
   "Stopping": "停止中",
+  "Submitted": "已提交",
+  "Submit": "提交",
+  "Pass": "通过",
+  "Reject": "拒绝",
+  "Release": "发布",
+  "Suspend": "暂停",
+  "Recover": "恢复",
 
   "public": "公共",
   "private": "私有",
@@ -195,6 +225,9 @@
   "The Credential of provider": "提供商的凭证",
   "Access Key ID": "访问密钥ID",
   "Secret Access Key": "访问密钥私钥",
+  "Cloud Provider": "云提供商",
+  "Region": "区域",
+  "Create Runtime": "创建运行环境",
 
   "Remove": "移除",
   "Add": "添加",
@@ -220,6 +253,72 @@
   "Manage Clusters": "管理集群",
   "Browse": "浏览",
   "Manage": "管理",
+
+  "Store": "商店",
+  "Platform": "平台",
+  "All Apps": "所有应用",
+  "App Reviews": "应用审核",
+  "All Clusters": "所有集群",
+  "Categroies": "分类",
+  "Appearance": "外观",
+  "Tickets": "优惠卷",
+  "Notifications": "通知",
+  "Service Status": "服务状态",
+  "All Users": "所有用户",
+  "User Groups": "用户分组",
+  "Policy": "政策",
+  "SSH Keys": "SSH密钥",
+  "Profile": "账号设置",
+  "Test": "测试",
+
+  "Create New User": "创建新用户",
+  "Administrator": "管理员",
+  "Developer": "开发者",
+  "Normal User": "普通用户",
+  "Email": "邮箱",
+
+  "Settings": "设置",
+  "Basic setting": "基本设置",
+  "Change Password": "修改密码",
+  "User Name": "用户名称",
+  "Current Password": "当前密码",
+  "New Password": "新密码",
+  "Confirm New Password": "确认新密码",
+  "Modify": "修改",
+  "Create SSH Key": "创建SSH密钥",
+  "Public Key": "公钥",
+  "Format": "格式",
+  "Created on": "创建于",
+  "Delete SSH Key": "删除SSH密钥",
+  "delete_key_desc": "您确实要删除该SSH密钥吗?",
+
+  "Purchased": "已购买",
+  "My runtimes": "我的环境",
+
+
+  "creat_new_app": "创建新应用程序",
+  "creat_new_version": "创建新版本",
+  "select_repo_app": "选择一个仓库来存储您的应用程序",
+  "diff_repo": "公共仓库和私人仓库之间的区别.",
+  "click_upload": "请单击以选择文件上载",
+  "file_format_note": "文件格式支持TAR，TAR.GZ，TAR.BZ和ZIP",
+  "view_guide_1": "查看",
+  "view_guide_2": " <<Openpitrix开发指南>> ",
+  "view_guide_3": "并了解如何制作配置文件",
+  "app_created": "您的应用程序已创建",
+  "go_back_app_1": "您也可以",
+  "go_back_app_2": "返回",
+  "go_back_app_3": "并重新加载应用程序包。",
+  "edit_version_1": "您也可以",
+  "edit_version_2": "编辑",
+  "edit_version_3": "此版本的更多信息",
+  "version_created": "新版本已创建。",
+  "version_submiited": "版本{{name}}已经被提交.",
+  "review_process_info": "审核过程通常需要2-3个工作日，请耐心等待。",
+  "version_name_tips": "使用该数字表示应用程序的版本号",
+  "version_desc_tips": "版本说明将显示在应用详细信息页面上，字数不应超过300字",
+  "ssh_key_guide": "SSH密钥允许您在计算机和群集节点之间建立安全连接。",
+
 
   "EMPTY_APP_TIPS": "如果OpenPitrix管理员设置完毕仓库，所有的应用会自动导入。作为OpenPitrix用户，可以浏览所有公有应用，可以通过标签和类别来过滤应用。",
   "EMPTY_REPO_TIPS": "应用开发者可以非常轻松的创建OpenPitrix规范的打包应用，该应用通过yaml或者json格式来描述，并可以上传应用到http服务器或者对象存储系统。",
