feat: User pages integrate API
fix: App query and delete according to status

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -130,7 +130,7 @@
 
   "Passed": "已通过",
   "Rejected": "已拒绝",
-  "Draft": "待提交",
+  "Draft": "未提交",
   "Creating": "创建中",
   "Pending": "等待中",
   "Active": "活跃",
@@ -272,10 +272,15 @@
   "Test": "测试",
 
   "Create New User": "创建新用户",
+  "Modify User" : "修改用户",
+  "Delete User" : "删除用户",
   "Administrator": "管理员",
   "Developer": "开发者",
   "Normal User": "普通用户",
   "Email": "邮箱",
+  "delete_user_desc": "您确定要删除该用户吗?",
+  "Organization": "机构",
+  "Group": "团队",
 
   "Settings": "设置",
   "Basic setting": "基本设置",
