--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -25,6 +25,7 @@
   "Delete Category desc": "Are you sure delete this category?",
   "Delete Repo desc": "Are you sure delete this Repo?",
   "Delete Runtime desc": "Are you sure delete this Runtime?",
+  "delete_user_desc": "Are you sure delete this user?",
 
   "No search data": "No results for search.",
 
