--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -130,7 +130,7 @@
 
   "Passed": "已通过",
   "Rejected": "已拒绝",
-  "Draft": "未提交",
+  "Draft": "待上架",
   "Creating": "创建中",
   "Pending": "等待中",
   "Active": "活跃",
@@ -150,6 +150,8 @@
   "Release": "发布",
   "Suspend": "暂停",
   "Recover": "恢复",
+  "Published": "已上线",
+  "Recalled": "已下架",
 
   "public": "公共",
   "private": "私有",
