--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -58,6 +58,7 @@
 
   "Top Repos": "人气最佳的仓库",
   "Top Apps": "人气最佳的应用",
+  "Top Runtimes": "人气最佳的运行环境",
   "Latest Clusters": "最新创建的集群",
   "My Runtimes": "我的环境",
   "Recently Viewed Apps": "最近查看的应用",
@@ -325,7 +326,7 @@
   "EMPTY_APP_TIPS": "如果OpenPitrix管理员设置完毕仓库，所有的应用会自动导入。作为OpenPitrix用户，可以浏览所有公有应用，可以通过标签和类别来过滤应用。",
   "EMPTY_REPO_TIPS": "应用开发者可以非常轻松的创建OpenPitrix规范的打包应用，该应用通过yaml或者json格式来描述，并可以上传应用到http服务器或者对象存储系统。",
   "EMPTY_CLUSTER_TIPS": "OpenPitrix管理应用的生命周期，贯穿始终。应用的状态(通常以集群方式运行)例如：阻塞，活跃，关闭，删除。如果管理员想停止集群，只需要告诉OpenPitrix， 它将帮助云运维人员完成后续工作。",
-
+  "EMPTY_RUNTIME_TIPS": "在组织中部署为一站式应用程序管理平台，以支持包括混合云在内的多个云系统。",
   "Private Repo": "私有仓库",
 
   "NORMAL_GUIDING_WORDS": "欢迎来到OpenPitrix, 接下来你想做什么?..",
