fix: Modify app reviews page data
*feat: Cluster node table add eip

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -3,11 +3,11 @@
     "slogan": "多云应用管理平台"
   },
 
-  "Dashboard": "仪表盘",
+  "Dashboard": "工作台",
   "Overview": "总览",
   "Apps": "应用",
   "Clusters": "集群",
-  "Runtimes": "运行环境",
+  "Runtimes": "环境",
   "Repos": "仓库",
   "Users": "用户",
   "Roles": "角色",
@@ -47,6 +47,7 @@
   "Information": "信息",
   "Application ID": "应用ID",
   "Created At": "创建时间",
+  "Versions": "版本列表",
 
   "greet words": "你好，{{name}}",
   "last login time": "上次登录时间 {{last_login}}",
@@ -166,20 +167,20 @@
   "operate cluster desc": "您确定要{{operate}}该集群吗？",
   "Cluster Name": "集群名称",
   "App": "应用",
-  "Runtime": "运行环境",
+  "Runtime": "环境",
   "Node Count": "节点数量",
   "User": "用户",
 
   "Frontgate ID": "Frontgate ID",
   "More": "更多",
-  "Activities": "活动",
+  "Activities": "操作日志",
   "Search Node": "搜索节点",
   "Role": "角色",
   "Node Status": "节点状态",
   "Configuration": "配置",
   "Private IP": "私有IP",
 
-  "Runtime Provider" : "运行环境提供商",
+  "Runtime Provider" : "环境云服务商",
   "Zone/Namespace" : "地区/命名空间",
   "Cluster": "集群",
   "Creator": "创建者",
@@ -197,34 +198,34 @@
   "Delete Category desc": "您确定要删除该分类吗?",
 
 
-  "Provider": "提供商",
+  "Provider": "云服务商",
   "Modify Repo": "修改仓库",
   "Delete Repo": "删除仓库",
   "Delete Repo desc": "您确定要删除该仓库吗?",
   "Search Repo": "搜索仓库",
   "Trigger indexer": "触发索引器",
-  "Runtime Selectors": "运行环境选择器",
+  "Runtime Selectors": "环境选择器",
   "Event Id": "事件ID",
   "successful": "已成功",
   "Successful": "已成功",
   "The name of the repo": "仓库的名称",
 
-  "Runtime Name": "运行环境名称",
+  "Runtime Name": "环境名称",
   "Cluster Count": "集群数量",
-  "Delete Runtime": "删除运行环境",
-  "Modify Runtime": "修改运行环境",
-  "Delete Runtime desc": "您确定要删除该运行环境吗?",
-  "Search Runtimes": "搜索运行环境",
+  "Delete Runtime": "删除环境",
+  "Modify Runtime": "修改环境",
+  "Delete Runtime desc": "您确定要删除该环境吗?",
+  "Search Runtimes": "搜索环境",
   "Zone": "区域",
   "Namespace": "命名空间",
   "Credential": "证书",
-  "The name of the runtime": "运行环境的名称",
-  "The Credential of provider": "提供商的凭证",
+  "The name of the runtime": "环境的名称",
+  "The Credential of provider": "云服务商的凭证",
   "Access Key ID": "访问密钥ID",
   "Secret Access Key": "访问密钥私钥",
-  "Cloud Provider": "云提供商",
+  "Cloud Provider": "云服务商",
   "Region": "区域",
-  "Create Runtime": "创建运行环境",
+  "Create Runtime": "创建环境",
 
   "Remove": "移除",
   "Add": "添加",
@@ -237,8 +238,8 @@
   "No search data": "没有相关搜索结果！",
   "Guide": "指导",
   "Create Repo explain": "在OpenPitrix中，部署的每个应用程序都是基础软件包存储库，换句话说，如果要将OpenPitrix用于多云应用程序管理器，则需要先创建存储库。应用程序管理器可以将包存储到http / https服务器或S3对象存储。",
-  "Create Runtime explain": "运行环境是云提供商，它可以是AWS、GCE、QingCloud、Kubernetes、OpenStack、VMware VSphere等，让OpenPitrix有权限访问这些云提供商，OpenPitrix将管理所有这些应用程序。",
-  "Deploy App explain": "OpenPitrix将应用程序部署到任何云提供商，它非常简单，选择想要部署的应用程序，然后选择运行环境（云提供商），最后按下确定按钮。这样就完成了。",
+  "Create Runtime explain": "环境是云服务商，它可以是AWS、GCE、QingCloud、Kubernetes、OpenStack、VMware VSphere等，让OpenPitrix有权限访问这些云服务商，OpenPitrix将管理所有这些应用程序。",
+  "Deploy App explain": "OpenPitrix将应用程序部署到任何云服务商，它非常简单，选择想要部署的应用程序，然后选择环境（云服务商），最后按下确定按钮。这样就完成了。",
 
   "NO_SEARCH_DATA": "暂无应用数据!",
   "uncategorized": "未分类",
@@ -293,7 +294,7 @@
   "Delete SSH Key": "删除SSH密钥",
   "delete_key_desc": "您确实要删除该SSH密钥吗?",
 
-  "Purchased": "已购买",
+  "Purchased": "已购应用",
   "My runtimes": "我的环境",
 
 
