--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -99,6 +99,7 @@
   "Version Name": "版本名称",
   "Download": "下载",
   "Date Created": "创建时间",
+  "Create version": "创建版本",
 
 
   "My Apps": "我的应用",
@@ -303,7 +304,7 @@
   "select_repo_app": "选择一个仓库来存储您的应用程序",
   "diff_repo": "公共仓库和私人仓库之间的区别。",
   "click_upload": "请单击以选择文件上载",
-  "file_format_note": "文件格式支持TAR，TAR.GZ，TAR.BZ和ZIP",
+  "file_format_note": "文件格式支持TAR，TAR.GZ 和 TAR.BZ",
   "view_guide_1": "查看",
   "view_guide_2": " <<Openpitrix开发指南>> ",
   "view_guide_3": "并了解如何制作配置文件",
