--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -63,7 +63,7 @@
   "version_desc_tips": "The description of the version will appear on the app details page, and the number of words should not exceed 300 words",
   "ssh_key_guide":" SSH keys allow you to establish a secure connection between your computer and Cluster Nodes.",
   "delete_key_desc": "Are you sure delete this SSH Key?",
-  "app_review_desc": "This application version has been {{status}}.",
+  "app_review_desc": "This application version [{{version}}] has been",
 
   "EMPTY_APP_TIPS": "If OpenPitrix administrator setting repo done, all applications can imported automatically. As OpenPitrix user, can browse all public applications. and browse by label or categories",
   "EMPTY_REPO_TIPS": "Application developer create OpenPitrix packaged apps very easy, it's used yaml or json format for description language, and upload to http server or object storage",
