refactor: App detail versions can not add duplicate version

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -355,5 +355,7 @@
   "Back to developer": "切换为开发者",
   "Document": "文档",
 
-  "None": "无"
+  "None": "无",
+
+  "Already create new version": "已创建新版本"
 }
