fix: Fix change helm type no data(#471)

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -344,9 +344,9 @@
 
   "Choose category": "选择分类",
   "Deployment Name": "部署名称",
-  "Deployment Node": "部署节点",
-  "StatefulSet Node": "状态节点",
-  "DaemonSet Node": "守护节点",
+  "Deployment Pods": "部署",
+  "StatefulSet Pods": "有状态副本集",
+  "DaemonSet Pods": "守护进程集",
   "Rollback cluster": "回滚集群",
   "Update_env cluster": "修改集群环境",
   "Update cluster env": "修改集群环境",
