feat: Add cluster attach or detach key pairs
* fix: Home detail header show bug

* fix Purchased page apps query bug

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -298,7 +298,10 @@
   "Format": "格式",
   "Created on": "创建于",
   "Delete SSH Key": "删除SSH密钥",
-  "delete_key_desc": "您确实要删除该SSH密钥吗?",
+  "delete_key_desc": "您确定要删除该SSH密钥吗?",
+  "Attach SSH Key": "绑定SSH密钥",
+  "Detach SSH Key": "解绑SSH密钥",
+  "detach_key_desc": "您确定要解绑该SSH密钥与所选节点的绑定吗?",
 
   "Purchased": "已购应用",
   "My runtimes": "我的环境",
