--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -63,6 +63,7 @@
   "version_desc_tips": "The description of the version will appear on the app details page, and the number of words should not exceed 300 words",
   "ssh_key_guide":" SSH keys allow you to establish a secure connection between your computer and Cluster Nodes.",
   "delete_key_desc": "Are you sure delete this SSH Key?",
+  "detach_key_desc": "Are you sure detach the SSH Key from the selected node?",
   "app_review_desc": "This application version [{{version}}] has been",
 
   "EMPTY_APP_TIPS": "If OpenPitrix administrator setting repo done, all applications can imported automatically. As OpenPitrix user, can browse all public applications. and browse by label or categories",
