--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -317,7 +317,7 @@
   "click_upload": "请单击以选择文件上载",
   "file_format_note": "文件格式支持TAR，TAR.GZ 和 TGZ",
   "view_guide_1": "查看",
-  "view_guide_2": " <<Openpitrix开发指南>> ",
+  "view_guide_2": "《Openpitrix开发指南》",
   "view_guide_3": "并了解如何制作配置文件",
   "app_created": "您的应用程序已创建",
   "go_back_app_1": "您也可以",
